OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/istio-validator-basic-istio-system.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"maistra.io/mesh-generation":"2.6.4-1-2"},"labels":{"app":"istiod","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.6.4-1-2","istio":"istiod","istio.io/rev":"basic","mais [...]
    maistra.io/mesh-generation: 2.6.4-1-2
  creationTimestamp: "2025-01-09T14:45:32Z"
  generation: 2
  labels:
    app: istiod
    app.kubernetes.io/component: istio-discovery
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-discovery
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.6.4-1-2
    istio: istiod
    istio.io/rev: basic
    maistra-version: 2.4.13
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:maistra.io/mesh-generation: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.kubernetes.io/version: {}
          f:istio: {}
          f:istio.io/rev: {}
          f:maistra-version: {}
          f:maistra.io/owner: {}
          f:maistra.io/owner-name: {}
          f:release: {}
      f:webhooks:
        .: {}
        k:{"name":"rev.validation.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: istio-operator
    operation: Update
    time: "2025-01-09T14:45:42Z"
  name: istio-validator-basic-istio-system
  resourceVersion: "42574"
  uid: 1c29bf4a-7b90-4ba9-a768-0273fc0ee5f4
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRUzhGcHNHU2lNL0tKVDNFVTlXMWp2ekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJMU1ERXdPVEUwTkRVME1Wb1hEVE0xTURFdwpOekUwTkRVME1Wb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNMFV4N2pHUmdOdHZ4NDBFZ3ArY2pqaE9CVkFCVTBRcUU3WTN0TUYKRTcxTkY1N1I3SHVhbWMrV2ljY2MwSm9qQWVIbkNVU0M5TkhHSkhiWFMyeTRINnRZbUJlOFZkNzluMm5vQWpHOAowbkorS0xQVmRHbj [...]
    service:
      name: istiod-basic
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: rev.validation.istio.io
  namespaceSelector:
    matchExpressions:
    - key: maistra.io/member-of
      operator: In
      values:
      - istio-system
  objectSelector:
    matchExpressions:
    - key: maistra-version
      operator: DoesNotExist
  rules:
  - apiGroups:
    - authentication.maistra.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  - apiGroups:
    - rbac.maistra.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  - apiGroups:
    - security.istio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - authorizationpolicies
    - peerauthentications
    - requestauthentications
    scope: '*'
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1alpha3
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - destinationrules
    - gateways
    - serviceentries
    - sidecars
    - virtualservices
    - workloadentries
    - workloadgroups
    scope: '*'
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - envoyfilters
    scope: '*'
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - proxyconfigs
    scope: '*'
  - apiGroups:
    - telemetry.istio.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - telemetries
    scope: '*'
  - apiGroups:
    - extensions.istio.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - wasmplugins
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
